--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 
                 <div class="gameboy-screen">
                     <div class="screen-content">
-                        <h1 class="birthday-title">Happy Birthday!</h1>
+                        <h1 class="birthday-title">Happy Birthday🎂🥳</h1>
                         <div class="start-text">Press Start Button</div>
                         <div class="screen-info">
                             <span class="dot-matrix">DOT MATRIX WITH STEREO SOUND</span>
@@ -167,7 +167,7 @@
                     <p>tapi kamu selalu menang</p>
                     <p>kok di hati aku, HEHE</p>
                     <p>^_^</p>
-                    <p class="love-text">I LOVE YOU &lt;3</p>
+                    <p class="love-text">I LOVE YOU ❤️&lt;3</p>
                 </div>
                 <button class="modal-btn" id="ok-btn">OK</button>
             </div>
